--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -54,4 +54,10 @@ const { Content } = await blog.render();
       margin-bottom: 5px;
     }
   }
+
+  p {
+    margin-bottom: 8px;
+    font-size: 1.1rem;
+    line-height: 1.6;
+  }
 </style>
