added about page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,9 +17,9 @@ const uniqueTags: string[] = [...new Set(tags)];
     <div class="footer-group about">
       <h3>About</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam explicabo
-        quod quasi nemo porro reiciendis natus incidunt cupiditate fugiat
-        delectus!
+        Ocawebtech offers a comprehensive library of online courses and
+        downloadable resources to empower you on your professional journey.
+        Browse our extensive catalog and transform your future, today!
       </p>
     </div>
     <div class="footer-group categories">
