--- a/src/components/BackButton.astro
+++ b/src/components/BackButton.astro
@@ -1,8 +1,15 @@
-<a class="btn" href="/articles">Go Back</a>
+---
+interface Props {
+  text?: string;
+  bg?: string;
+}
+const { text = "Go Back", bg = "teal" } = Astro.props;
+---
+
+<a class="btn" href="/articles" style={{ backgroundColor: bg }}>{text}</a>
 
 <style>
   .btn {
-    background-color: teal;
     border-radius: 10px;
     padding: 5px 15px;
     color: #fff;
