--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,7 @@ const allBlogs: CollectionEntry<"blog">[] = (await getCollection("blog"))
 const featuredBlog: CollectionEntry<"blog"> = allBlogs[0];
 
 import { formatDate } from "../utils";
+import BackButton from "../components/BackButton.astro";
 ---
 
 <MainLayout title="Stories, Tutorial and Latest News">
@@ -57,6 +58,7 @@ import { formatDate } from "../utils";
     <!-- Article Card -->
     {allBlogs.slice(1).map((article) => <ArticleCard article={article} />)}
   </section>
+  <BackButton text="View All Blog Posts" bg="orange" />
 </MainLayout>
 <style>
   .hero {
@@ -123,5 +125,6 @@ import { formatDate } from "../utils";
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 15px;
+    margin-bottom: 20px;
   }
 </style>
